--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python Test.py
     - name: Commit and Push
-    - uses: EndBug/add-and-commit@v7
+      uses: EndBug/add-and-commit@v7
       with:
         message: 'Test commit'
         add: 'Test.txt'
