--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -34,6 +34,7 @@ jobs:
         python ShipIndex.py
         python Memory.py
         python PNData.py
+        python JuusNames.py
     - name: Commit and Push
       uses: EndBug/add-and-commit@v7
       with:
