--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -35,7 +35,7 @@ jobs:
         python Memory.py
         python PNData.py
         python JuusNames.py
-        python ChapterAwawrds.py
+        python ChapterAwards.py
     - name: Commit and Push
       uses: EndBug/add-and-commit@v7
       with:
