--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -1,30 +1,34 @@
 name: Wiki Utilities
 
 on:
+  schedule:
+  - cron:  '45 * * * *'
+  
   push:
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      
     - name: Update submodules
       run: |
         git submodule update --remote --init --recursive
-    - name: Set up Python ${{ matrix.python-version }}
+        
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install six
+        pip install gitpython
+        
     - name: Run Scripts
       run: |
         python Initialize.py
@@ -33,9 +37,16 @@ jobs:
         python PNData.py
         python JuusNames.py
         python ChapterAwards.py
+        
+    - name: Summary
+      run: |
+        output=$(Summary.py)
+        echo "::set-output name=summary::$output"
+      id: summary
+    
     - name: Commit and Push
       uses: EndBug/add-and-commit@v7
       with:
-        message: 'Automatic Update'
+        message: ${{ steps.summary.outputs.summary}}
         add: '-A'
       
